# memos-cli

./: README.md  pyproject.toml
client/: auth.py  memo.py  model.py  session.py
common/: config.py
memos/: __init__.py  cli.py  click_aliases.py  echo.py  edit.py  list.py  new.py  remove.py
memos/auth/: __init__.py  signin.py  signout.py  whoami.py
