[tool.poetry]
name = "memos-cli"
version = "0.1.0"
description = "A CLI frontend for memos self-hosted memo hub"
authors = ["Giulio De Matteis <hello@giuliodematte.is>"]
readme = "README.md"
packages = [
  {include = "memos"},
  {include = "client"},
  {include = "common"}
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
requests = "^2.30.0"
click-aliases = "^1.0.1"
prettytable = "^3.7.0"

[tool.poetry.scripts]
memos = "memos.cli:cli"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
